Manipulator handles drawn incorrectly by depth #34426

Closed
opened 2013-02-25 13:15:21 +01:00 by Tehrasha Darkon · 7 comments

%%%Windows7 x64 and Linux x64, 9600GT

Occurs at least since 2.59, did not try further back.

Handles on Scale and Translate manipulators are not rendered correctly by their depth.

Green handle always overdraws the blue and red handles, even when located 'behind' them.
Similarly, the red handle always overdraws the blue, and the blue handle is always overdrawn.

Oddly, it is only the handles that overlap incorrectly, the tails are correct and draw 'under' the handles when they should correctly.

see: http://www.blender.org/forum/viewtopic.php?p=102898

%%%

%%%Windows7 x64 and Linux x64, 9600GT Occurs at least since 2.59, did not try further back. Handles on Scale and Translate manipulators are not rendered correctly by their depth. Green handle always overdraws the blue and red handles, even when located 'behind' them. Similarly, the red handle always overdraws the blue, and the blue handle is always overdrawn. Oddly, it is only the handles that overlap incorrectly, the tails are correct and draw 'under' the handles when they should correctly. see: http://www.blender.org/forum/viewtopic.php?p=102898 %%%

Changed status to: 'Open'

Changed status to: 'Open'
Member

%%%I tracked it back to the 2.4x versions even. Old code here :) Nevertheless, something fun to check on at least.

I also noticed that even when red draws over blue, on click the blue one works. That's even worse.%%%

%%%I tracked it back to the 2.4x versions even. Old code here :) Nevertheless, something fun to check on at least. I also noticed that even when red draws over blue, on click the blue one works. That's even worse.%%%
Member

%%%Oh, I didnt notice Ton was on this now...
Anyways, I had a go at it and came up with the attached patch. This only adresses the order of drawing axis, cones(translate), and boxes(scaling). It does not handle clicks etc. Also: boxes/cones will still draw over axes, no matter if in front or not. I can look into this more (and improve logic of depth-ordering), just wanted to check if Ton already has something better...

Grreetz
Philipp%%%

%%%Oh, I didnt notice Ton was on this now... Anyways, I had a go at it and came up with the attached patch. This only adresses the order of drawing axis, cones(translate), and boxes(scaling). It does not handle clicks etc. Also: boxes/cones will still draw over axes, no matter if in front or not. I can look into this more (and improve logic of depth-ordering), just wanted to check if Ton already has something better... Grreetz Philipp%%%

%%%applied Philipp's patch r54923. with some changes.%%%

%%%applied Philipp's patch r54923. with some changes.%%%

Changed status from 'Open' to: 'Resolved'

Changed status from 'Open' to: 'Resolved'
Member

%%%Thanx Campbell, its always a great resource to see how its done properly :)%%%

%%%Thanx Campbell, its always a great resource to see how its done properly :)%%%
Member

%%%actually there was still something wrong: for translation the axis were still drawing in wrong order (cones draw OK, but axis not)

attaching a patch that solves this. this also makes it a little more consistent/readable (at least for me :S) in that zero is now always X, 1 is Y, 2 is Z.
[or did you have something else in mind when you made the order configurable in the first place, Campbell? "int axis_order- [x] = {2, 0, 1}"?]

Anyways, have a nice one
Philipp%%%

%%%actually there was still something wrong: for translation the axis were still drawing in wrong order (cones draw OK, but axis not) attaching a patch that solves this. this also makes it a little more consistent/readable (at least for me :S) in that zero is now always X, 1 is Y, 2 is Z. [or did you have something else in mind when you made the order configurable in the first place, Campbell? "int axis_order- [x] = {2, 0, 1}"?] Anyways, have a nice one Philipp%%%
Sign in to join this conversation.
No Label
Interest
Alembic
Interest
Animation & Rigging
Interest
Asset Browser
Interest
Asset Browser Project Overview
Interest
Audio
Interest
Automated Testing
Interest
Blender Asset Bundle
Interest
BlendFile
Interest
Collada
Interest
Compatibility
Interest
Compositing
Interest
Core
Interest
Cycles
Interest
Dependency Graph
Interest
Development Management
Interest
EEVEE
Interest
EEVEE & Viewport
Interest
Freestyle
Interest
Geometry Nodes
Interest
Grease Pencil
Interest
ID Management
Interest
Images & Movies
Interest
Import Export
Interest
Line Art
Interest
Masking
Interest
Metal
Interest
Modeling
Interest
Modifiers
Interest
Motion Tracking
Interest
Nodes & Physics
Interest
OpenGL
Interest
Overlay
Interest
Overrides
Interest
Performance
Interest
Physics
Interest
Pipeline, Assets & IO
Interest
Platforms, Builds & Tests
Interest
Python API
Interest
Render & Cycles
Interest
Render Pipeline
Interest
Sculpt, Paint & Texture
Interest
Text Editor
Interest
Translations
Interest
Triaging
Interest
Undo
Interest
USD
Interest
User Interface
Interest
UV Editing
Interest
VFX & Video
Interest
Video Sequencer
Interest
Virtual Reality
Interest
Vulkan
Interest
Wayland
Interest
Workbench
Interest: X11
Legacy
Blender 2.8 Project
Legacy
Milestone 1: Basic, Local Asset Browser
Legacy
OpenGL Error
Meta
Good First Issue
Meta
Papercut
Meta
Retrospective
Meta
Security
Module
Animation & Rigging
Module
Core
Module
Development Management
Module
EEVEE & Viewport
Module
Grease Pencil
Module
Modeling
Module
Nodes & Physics
Module
Pipeline, Assets & IO
Module
Platforms, Builds & Tests
Module
Python API
Module
Render & Cycles
Module
Sculpt, Paint & Texture
Module
Triaging
Module
User Interface
Module
VFX & Video
Platform
FreeBSD
Platform
Linux
Platform
macOS
Platform
Windows
Priority
High
Priority
Low
Priority
Normal
Priority
Unbreak Now!
Status
Archived
Status
Confirmed
Status
Duplicate
Status
Needs Info from Developers
Status
Needs Information from User
Status
Needs Triage
Status
Resolved
Type
Bug
Type
Design
Type
Known Issue
Type
Patch
Type
Report
Type
To Do
No Milestone
No project
No Assignees
4 Participants
Notifications
Due Date
The due date is invalid or out of range. Please use the format 'yyyy-mm-dd'.

No due date set.

Dependencies

No dependencies set.

Reference: blender/blender#34426
No description provided.