fix [#34426] Manipulator handles drawn incorrectly by depth original patch by Philipp Oeser (lichtwerk) with own changes.